# qstylizer

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  README.rst  doc_requirements.txt  requirements.txt  setup.cfg  tox.ini
doc/: Makefile  conf.py  index.rst  introduction.rst  make.bat  tutorial.rst
doc/api/: index.rst  parser.rst  style.rst
doc/api/descriptor/: index.rst  prop.rst  pseudoprop.rst  pseudostate.rst  qclass.rst  stylerule.rst  subcontrol.rst
doc/api/setter/: index.rst  prop.rst  pseudoprop.rst  pseudostate.rst  qclass.rst  subcontrol.rst
qstylizer/: parser.py  style.py
qstylizer/descriptor/: prop.py  pseudoprop.py  pseudostate.py  qclass.py  stylerule.py  subcontrol.py
qstylizer/setter/: __init__.py  prop.py  pseudoprop.py  pseudostate.py  qclass.py  subcontrol.py
test/: conftest.py
test/integration/: test_integration.py
test/unit/: test_style.py
