[metadata]
name = qstylizer
author = Brett Lambright
summary = Stylesheet Generator for PyQt{4-5}/PySide{1-2}
description-file = README.rst
license = MIT
home-page = https://github.com/blambright/qstylizer
classifier =
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    qstylizer

[extras]
doc =
    sphinx >= 1.2.2, < 2
    sphinx_rtd_theme >= 0.1.6, < 1
    sphinxcontrib-autoprogram >= 0.1.2, !=0.1.3, < 1
test =
    pytest-runner >= 2.7, < 3
    pytest >= 3.2, < 4
    pytest-mock >= 1.6, < 2
    pytest-catchlog >= 1, < 2
    pytest-xdist >= 1.1, < 2
    pytest-cov >= 2, < 3
    tox >= 2.9.0, < 3

[aliases]
test = pytest

[build_sphinx]
config-dir = doc
source-dir = doc
build-dir = build/doc
builder = html
all_files = 1
