[metadata]
name = qstylizer
author = Brett Lambright
summary = Stylesheet Generator for PyQt{4-5}/PySide{1-2}
description_file = README.rst
license = MIT
home_page = https://github.com/blambright/qstylizer
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Environment :: X11 Applications :: Qt
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9

[pbr]
skip_changelog = True
skip_authors = True

[files]
packages =
    qstylizer

[extras]
doc =
    sphinx >= 1.2.2, < 2
    sphinx_rtd_theme >= 0.1.6, < 1
    sphinxcontrib-autoprogram >= 0.1.2, !=0.1.3, < 1
test =
    pytest >= 6, < 7
    pytest-mock >= 3, < 4
    pytest-catchlog >= 1, < 2

test27 =
    pytest >= 4, < 5
    pytest-mock >= 2, < 3
    pytest-catchlog >= 1, < 2


[aliases]
test = pytest

[build_sphinx]
config-dir = doc
source-dir = doc
build-dir = build/doc
builder = html
all_files = 1

[bdist_wheel]
universal = 1
